fixed section widths so that no horizontal scroll bar appears

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,7 +92,7 @@ main {
   flex-wrap: wrap;
   margin: 0 0 20px 0;
   justify-content: flex-start;
-  width: 100vw;
+  width: 95vw;
 }
 
 .body-content {
